--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
                     Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Казак Наталья Болеславовна</strong>.
                 </p>
                 <p>
-                    Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>отряд БРПО имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
+                    Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>Пионерский отряд имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
                  <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, <strong>первичная организация РОО «Белая Русь» ГУО «Гимназии N6»</strong>.</p>
                 <p>
                     <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь <strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является руководителем ВПК «Гранит», ответственным за военно-патриотическое воспитание молодежи, а также за функционирование музея.
