--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@
     <meta property="og:url" content="{{ url_for('home', _external=True) }}">
     <meta property="og:image" content="{{ url_for('static', filename='logo_gymn.avif', _external=True) }}">
     <meta property="og:site_name" content="ГУО «Гимназия №6 г. Минска»">
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
     <link rel="icon" href="{{ url_for('favicon') }}" type="image/x-icon">
     <link rel="icon" sizes="16x16" href="{{ url_for('favicon_16') }}" type="image/png">
     <link rel="icon" sizes="32x32" href="{{ url_for('favicon_32') }}" type="image/png">
@@ -43,6 +43,13 @@
     </div>
 
     <header class="header">
+        <div class="logo">
+            <img src="{{ url_for('static', filename='pobeda.avif') }}" 
+                alt="Логотип Гимназии №6" 
+                width="150" 
+                height="84" 
+                loading="lazy">
+        </div>
         <div class="logo">
             Гимназия №6 г. Минска
         </div>
@@ -91,7 +98,7 @@
                 </p>
                 <p>
                     Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>Пионерский отряд имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
-                 <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, <strong>первичная организация РОО «Белая Русь» ГУО «Гимназии N6»</strong>.</p>
+                 <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, <strong>первичная организация РОО «Белая Русь» ГУО «Гимназии №6»</strong>.</p>
                 <p>
                     <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь <strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является руководителем ВПК «Гранит», ответственным за военно-патриотическое воспитание молодежи, а также за функционирование музея.
                 </p>
