--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -91,6 +91,13 @@
     </div>
 
     <header class="header">
+        <div class="logo">
+            <img src="{{ url_for('static', filename='pobeda.avif') }}" 
+                alt="Логотип Гимназии №6" 
+                width="150" 
+                height="84" 
+                loading="lazy">
+        </div>
         <div class="logo">Гимназия №6 г. Минска</div>
         <button class="hamburger" aria-label="Открыть меню">
             <span>&#9776;</span>
