add new exhibit

--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -156,11 +156,11 @@
 
                     <div class="exhibit-item">
                         <!-- ДОБАВЛЕНО: width/height + loading="lazy" -->
-                        <img src="{{ url_for('static', filename='exhibit3.avif') }}" alt="Макет военной техники" width="300" height="220" loading="lazy">
+                        <img src="{{ url_for('static', filename='exhibit2.jpg') }}" alt="Макет военной техники" width="300" height="220" loading="lazy">
                         <div class="exhibit-info">
-                            <h3>Макет танка Т-34</h3>
+                            <h3>CШ-40</h3>
                             <p>
-                                Подробный макет легендарного танка Т-34, символа победы в Великой Отечественной войне. Макет используется для наглядного изучения военной истории и техники.
+                                CШ-40 - средство индивидуальной защиты военнослужащих, широко использовался в Вооружённых Силах СССР во время Великой Отечественной войны и в послевоенные годы.
                             </p>
                         </div>
                     </div>
