--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                 </p>
                 <div class="gallery">
                     <img src="static/museum1.webp" alt="Экспонат музея 1" width="300" height="250" loading="lazy">
-                    <img src="static/museum2.webp" alt="Экспонат музея 2" width="300" height="250" loading="lazy">
+                    <img src="static/museum2.avif" alt="Экспонат музея 2" width="300" height="250" loading="lazy">
                     <img src="static/museum3.webp" alt="Экспонат музея 3" width="300" height="250" loading="lazy">
                     <img src="static/museum4.webp" alt="Экспонат музея 4" width="300" height="250" loading="lazy">
                     <img src="static/museum5.jpg" alt="Экспонат музея 5" width="300" height="250" loading="lazy">
