--- a/templates/index.html
+++ b/templates/index.html
@@ -97,10 +97,13 @@
                     Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году . Строительство первого корпуса началось в 1982 году на пустыре микрорайона «Запад-3», и школа открыла свои двери для учеников в 1983 году . В 1991 году учреждение получило статус гимназии и второй учебный корпус по улице Некрасова, 24. Дальнейшее развитие привело к открытию третьего корпуса 1 сентября 2007 года, что значительно расширило образовательные и воспитательные возможности для учащихся .
                 </p>
                 <p>
-                    Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>Пионерский отряд имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
+                    Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>Пионерская дружина имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
                  <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, <strong>первичная организация РОО «Белая Русь» ГУО «Гимназии №6»</strong>.</p>
                 <p>
                     <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь <strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является руководителем ВПК «Гранит», ответственным за военно-патриотическое воспитание молодежи, а также за функционирование музея.
+                </p>
+                <p>
+                    <strong>Официальный сайт:</strong> <a href="http://gymn6.minsk.edu.by/" target="_blank">http://gymn6.minsk.edu.by/</a>
                 </p>
             </div>
         </section>
