--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -136,7 +136,7 @@
 
         <section id="exhibits" class="section exhibits">
             <div class="section-content show">
-                <h2>Ключевые экспонаты</h2>
+                <h2>Экспонаты музея</h2>
                 <p>
                     Ниже представлены некоторые из самых значимых и уникальных экспонатов, собранных в нашем музее, с подробными описаниями их истории и значения.
                 </p>
@@ -158,17 +158,17 @@
                         <div class="exhibit-info">
                             <h3>CШ-40</h3>
                             <p>
-                                CШ-40 - средство индивидуальной защиты военнослужащих, широко использовался в Вооружённых Силах СССР во время Великой Отечественной войны и в послевоенные годы.
+                                СШ - 40 - Шлем(Каска) военнослужащих Советского союза образца 1940 года. Шлем был найден в 2024 году при проведении строительно-монтажных работ по реконструкции спорткомплекса «Динамо» на улице Даумана в городе Минске и передан в музей родственником одного из сотрудников гимназии.
                             </p>
                         </div>
                     </div>
 
                     <div class="exhibit-item">
-                        <img src="{{ url_for('static', filename='exhibit3.avif') }}" alt="Форма офицера Белорусской армии уставная" width="426" height="320" loading="lazy">
+                        <img src="{{ url_for('static', filename='exhibit3.avif') }}" alt="Форма военнослужащего Белорусской армии уставная" width="426" height="320" loading="lazy">
                         <div class="exhibit-info">
-                            <h3>Форма офицера Красной Армии</h3>
+                            <h3>Форма военнослужащего Белорусской армии</h3>
                             <p>
-                                Летом 1944 года, во время операции «Багратион», солдаты и офицеры Красной Армии, освобождавшие Беларусь, носили уставную форму образца 1943 года. Она отличалась погонами, восстановленными после их отмены в 1918 году, и была символом возрождённой воинской дисциплины и традиций.
+                                Именная полевая форма одежды офицера белорусской армии нового образца. Была принята в 2020 году ввиду усовершенствования боевой формы одежды
                             </p>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                         <div class="exhibit-info">
                             <h3>Полевой телефон ТА-57</h3>
                             <p>
-                                Хотя этот надёжный полевой телефонный аппарат с индукторным вызовом стал символом советской связи, его серийное производство началось лишь в 1957 году и он не принимал участия в боях Великой Отечественной войны.
+                                ТА-57  — военно-полевой телефонный аппарат универсального типа с системой индукторного вызова производства СССР, выпускался с 1957 года.
                             </p>
                         </div>
                     </div>
