--- a/templates/index.html
+++ b/templates/index.html
@@ -94,13 +94,13 @@
                 
                 <h1>Гимназия №6 г. Минска</h1>
                 <p>
-                    Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году . Строительство первого корпуса началось в 1982 году на пустыре микрорайона «Запад-3», и школа открыла свои двери для учеников в 1983 году . В 1991 году учреждение получило статус гимназии и второй учебный корпус по улице Некрасова, 24. Дальнейшее развитие привело к открытию третьего корпуса 1 сентября 2007 года, что значительно расширило образовательные и воспитательные возможности для учащихся .
+                    Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году . Строительство первого корпуса началось в 1982 году на пустыре микрорайона «Запад-3», и школа открыла свои двери для учеников в 1983 году . В 1991 году учреждение получило статус гимназии и второй учебный корпус по улице Некрасова, 24. Дальнейшее развитие привело к открытию третьего корпуса 1 сентября 2007 года, что значительно расширило образовательные и воспитательные возможности для учащихся.
                 </p>
                 <p>
-                    Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>Пионерская дружина имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
-                 <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, <strong>первичная организация РОО «Белая Русь» ГУО «Гимназии №6»</strong>.</p>
+                    Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>пионерская дружина имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
+                 <strong>первичная организация ОО БРСМ ГУО «Гимназия №6 г. Минска»</strong>, <strong>первичная организация РОО «Белая Русь» ГУО «Гимназия №6 г. Минска»</strong>.</p>
                 <p>
-                    <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь <strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является руководителем ВПК «Гранит», ответственным за военно-патриотическое воспитание молодежи, а также за функционирование музея.
+                    <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь <strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является также руководителем военно-патриотического клуба «Гранит», ответственным за военно-патриотическое воспитание учащихся гимназии, а также за работу музея.
                 </p>
                 <p>
                     <strong>Официальный сайт:</strong> <a href="http://gymn6.minsk.edu.by/" target="_blank">http://gymn6.minsk.edu.by/</a>
@@ -114,7 +114,7 @@
             <div class="section-content">
                 <h2>Музей «Вооруженные Силы Республики Беларусь»</h2>
                 <p>
-                    Музей «Вооруженные Силы Республики Беларусь» был открыт в гимназии №6 с целью сохранения памяти о героическом прошлом белорусского народа и воспитания патриотизма . Экспозиция, носящая название «Борьба белорусского народа с немецко-фашистскими захватчиками», размещается во втором учебном корпусе и насчитывает 117 уникальных экспонатов .
+                    Музей «Вооруженные Силы Республики Беларусь» был открыт в гимназии с целью сохранения памяти о героическом прошлом белорусского народа и воспитания патриотизма. Экспозиция, носящая название «Борьба белорусского народа с немецко-фашистскими захватчиками», размещается во втором учебном корпусе и насчитывает 117 уникальных экспонатов .
                 </p>
                 <div class="gallery">
                     <img src="static/museum1.avif" alt="Экспонат музея 1" width="320" height="240" loading="lazy">
@@ -125,10 +125,16 @@
                     <img src="static/museum6.avif" alt="Экспонат музея 6" width="320" height="240" loading="lazy">
                 </div>
                 <p>
-                    В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он служит важным центром <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
+                    В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он является центром узчения героических, боевых, воинских, патриотических традиций Вооруженных Сил Республики Беларусь <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
                 </p>
                 <p>
-                    Среди наиболее ценных артефактов — стальной шлем образца 1940 года (СШ-40), который широко использовался советскими военнослужащими во время Великой Отечественной войны . Также в музее представлены экспонаты, связанные с военно-воздушными силами, которые были переданы в дар гимназии столяром Евгением Рыбаченком . Особую гордость коллекции составляет диорама «Освобождение города Минска», полностью разработанная и смоделированная учащимися гимназии с использованием современных 3D-технологий, что является ярким примером их вовлеченности в сохранение исторической памяти .
+                    Стрежнем данного музея является военная история, которая обьективно отражает военные события и процессы зарождения и развития военных формирований, оперативного искусства и средств вооружонной борьбы.
+                </p>
+                <p>
+                    В основных экспозицях музея важное место отводиться показу приоретета белоруских национальных и духовно-нравственных ценностей: государственности, патриотизма, верности воинскому долгу, чести и достоинстве, готовности защищать интересы родины.
+                </p>
+                <p>
+                    Среди наиболее ценных артефактов — стальной шлем образца 1940 года (СШ-40), который широко использовался советскими военнослужащими во время Великой Отечественной войны. Также в музее представлены экспонаты, связанные с военно-воздушными силами, которые были переданы в дар гимназии столяром Евгением Рыбаченком. Особую гордость коллекции составляет диорама «Освобождение города Минска», полностью разработанная и смоделированная учащимися гимназии с использованием современных 3D-технологий, что является ярким примером их вовлеченности в сохранение исторической памяти .
                 </p>
                 
                 <div class="button-container">
@@ -154,13 +160,12 @@
                     Основные <strong>цели</strong> клуба:
                 </p>
                 <ul>
-                    <li>Изучение истории Республики Беларусь и всестороннее знакомство с военно-патриотическими традициями белорусской армии;</li>
-                    <li>Подготовка учащихся к службе в Вооруженных Силах Республики Беларусь;</li>
-                    <li>Организация летних лагерей военно-патриотической и туристско-краеведческой направленности;</li>
-                    <li>Проведение поездок и туристических походов по историческим местам Республики Беларусь;</li>
-                    <li>Организация и проведение военно-спортивных игр, соревнований, конкурсов;</li>
-                    <li>Информационно-издательская деятельность в области развития гражданственности и патриотизма молодежи;</li>
-                    <li>Оказание шефской помощи ветеранам Великой Отечественной войны, труда и правоохранительных органов; семьям военнослужащих, погибших при исполнении воинского долга.</li>
+                    <li>Повышение в обществе авторитета и престижа военной службы;</li>
+                    <li>Сохранение и приумножение патриотических традиций;</li>
+                    <li>Формирование гражданско-патриотических и идейно-нраственных качеств у учащихся;</li>
+                    <li>Формирование у гимназистов готовности и практической способности к выполнению гражданского долга и конституционных обязанностей по защите Отечества;</li>
+                    <li>Формирование навыков здорового образа жизни у учащихся;</li>
+                    <li>Воспитание у гимназистов высокой гражданско-социальной активности, патриотическое всестороннее развитие и совершенствование личности учащихся, удолетворяя их индивидуальных потребностей в интеллектуальном, нраственном и физическом совершенствовании;</li>
                 </ul>
             </div>
 
@@ -171,10 +176,9 @@
                     Военно-патриотический клуб «Гранит» включает в себя:
                 </p>
                 <ul>
-                    <li>Руководитель — Халипов Сергей Сергеевич, полковник запаса;</li>
-                    <li>Командиры отрядов (по возрастным группам);</li>
-                    <li>Активисты — учащиеся гимназии, проявившие интерес к военно-патриотической деятельности;</li>
-                    <li>Штаб клуба — координирует мероприятия, ведёт документацию, взаимодействует с партнёрами.</li>
+                    <li>Руководитель Клуба — Халипов Сергей Сергеевич, полковник запаса;</li>
+                    <li>Заместитель руководителя клуба;</li>
+                    <li>Воспитанники клуба;</li>
                 </ul>
             </div>
 
