--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
                     В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он является центром узчения героических, боевых, воинских, патриотических традиций Вооруженных Сил Республики Беларусь <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
                 </p>
                 <p>
-                    Стрежнем данного музея является военная история, которая обьективно отражает военные события и процессы зарождения и развития военных формирований, оперативного искусства и средств вооружонной борьбы.
+                    Стрежнем данного музея является военная история, которая обьективно отражает военные события и процессы зарождения и развития военных формирований, оперативного искусства и средств вооруженной борьбы.
                 </p>
                 <p>
                     В основных экспозицях музея важное место отводиться показу приоретета белоруских национальных и духовно-нравственных ценностей: государственности, патриотизма, верности воинскому долгу, чести и достоинстве, готовности защищать интересы родины.
